# E-SCPE

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  build.ps1  build.rs  deny.toml  escpe.toml.example  vendor_public.key
.github/: CODEOWNERS  CODEQL_SETUP.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflow/: codeql-custom.yml
.github/workflows/: ci.yml  codeql.yml
benches/: core_bench.rs
installer/: main.wxs  wix.json
src/: chsh.rs  config.rs  error.rs  ffi.rs  ledger.rs  lib.rs  license.rs  main.rs  report.rs  signing.rs  tag.rs  util.rs
tests/: core_smoke.rs  error_cases.rs  ffi_smoke.rs  full_pipeline.rs  license_lifecycle.rs
winui/: App.xaml  App.xaml.cs  EscpeWinUI.csproj  EscpeWinUI.slnx  Imports.cs  Package.appxmanifest  app.manifest
winui.tests/: AppSettingsTests.cs  EscpeCliTests.cs  EscpeNativeExceptionTests.cs  EscpeWinUI.Tests.csproj  Usings.cs
winui/Properties/: launchSettings.json
winui/Services/: AppSettings.cs  EscpeCli.cs  EscpeNative.cs
winui/Views/: MainPage.xaml  MainPage.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs  ShellPage.xaml  ShellPage.xaml.cs
